--- a/index.html
+++ b/index.html
@@ -1,236 +1,92 @@
-<html>
-
-  <!-- Tmr Virus Was Here!! -->
-  <!-- Team Virus -->
-
-  <script> 
-     alert("Wh00pz ! your security get down !");
-</script>
-<head>
-	<link rel="icon" href="https://i.ibb.co/590Z6S4/Picsart-23-08-05-16-46-12-318.jpg">
-    <title>Hacked by Tmr Virus</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="title" content="Hacked by Tmr Virus">
-    <meta name="description" content="wh00pz ! your security get down">
-    <meta name="keywords" content="hacked,deface,wordpress,website,whitehat,blackhat,defacer,hack,mirror">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="English">
-    <meta name="revisit-after" content="60 days">
-    <meta name="author" content="Team Virus">
-    <meta property="og:image" content="https://pbs.twimg.com/media/F_xSzuuXIAAJ31Z.jpg">
-    <meta name="theme-color" content="#000">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <style type='text/css'>
-      body,
-      a:hover {
-        cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym46.cur), progress !important;
-      }
-    </style>
-    <link rel="stylesheet" href="https://bit.ly/2UGCIC5">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Siêu Yêu Thanh Chúc:3</title>
+    <link rel="stylesheet" href="canvas.css" />
+    <link rel="stylesheet" href="present.css" />
+    <link rel="stylesheet" href="card.css" />
+    <link rel="stylesheet" href="index.css" />
+    <script src="jquery.js"></script>
   </head>
-  <body bgcolor="black" text="white" oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;" onclick="document.getElementById('lagu').play();fs()" id="body" onload="typeWriter()">
-    <style type="text/css">
-      center {
-        font-family: Courier;
-      }
+  <body>
+    <div id="password-modal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); display: flex; justify-content: center; align-items: center; z-index: 9999;">
+      <div style="background: white; padding: 20px; border-radius: 10px; text-align: center;">
+        <h2>Mật khẩu là ngày sinh nhật của ny bn </h2>
+        <input 
+          type="password" 
+          id="password-input" 
+          placeholder="VD: ??/??/????" 
+          style="padding: 10px; font-size: 16px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px; width: 80%;">
+        <br />
+        <button 
+          onclick="validatePassword()" 
+          style="padding: 10px 20px; font-size: 16px; background: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
+          Xác nhận
+        </button>
+        <p id="error-message" style="color: red; margin-top: 10px; display: none;">M DELL NHỚ CẢ NGÀY SINH CỦA T CƠ ĐẤY. M GIỎI NHỈ!</p>
+      </div>
+    </div>
 
-      img {
-        opacity: 80%;
-      }
-
-      red {
-        color: red;
-      }
-
-      #background-video {
-        height: 100vh;
-        width: 100vw;
-        object-fit: cover;
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        z-index: -1;
-      }
-
-      font {
-        text-shadow: #000 0px 0px 3px;
-        -webkit-font-smoothing: antialiased;
-      }
-
-      div {
-        animation: glitch 1s linear infinite;
-      }
-
-      @keyframes glitch {
-
-        2%,
-        64% {
-          transform: translate(2px, 0) skew(0deg);
-        }
-
-        4%,
-        60% {
-          transform: translate(-2px, 0) skew(0deg);
-        }
-
-        62% {
-          transform: translate(0, 0) skew(5deg);
-        }
-      }
-
-      div:before,
-      div:after {
-        content: attr(title);
-        position: absolute;
-        left: 0;
-      }
-
-      div:before {
-        animation: glitchTop 1s linear infinite;
-        clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-      }
-
-      @keyframes glitchTop {
-
-        2%,
-        64% {
-          transform: translate(2px, -2px);
-        }
-
-        4%,
-        60% {
-          transform: translate(-2px, 2px);
-        }
-
-        62% {
-          transform: translate(13px, -1px) skew(-13deg);
-        }
-      }
-
-      div:after {
-        animation: glitchBotom 1.5s linear infinite;
-        clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-        -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-      }
-
-      @keyframes glitchBotom {
-
-        2%,
-        64% {
-          transform: translate(-2px, 0);
-        }
-
-        4%,
-        60% {
-          transform: translate(-2px, 0);
-        }
-
-        62% {
-          transform: translate(-22px, 5px) skew(21deg);
-        }
-      }
-    </style>
-    <script language="JavaScript">
-      window.onbeforeunload = confirmExit;
-
-      function confirmExit() {
-        return "are you sure ? wkwk";
-      }
-
-      function fs() {
-        var elem = document.documentElement;
-        if (elem.requestFullscreen) {
-          elem.requestFullscreen();
-        } else if (elem.msRequestFullscreen) {
-          elem.msRequestFullscreen();
-        } else if (elem.mozRequestFullScreen) {
-          elem.mozRequestFullScreen();
-        } else if (elem.webkitRequestFullscreen) {
-          elem.webkitRequestFullscreen();
-        }
-        document.getElementById("body").style.cursor = 'none';
-        document.onkeydown = function(e) {
-          return false;
-        }
-        document.addEventListener("keydown", e => {
-          if (e.key == "F11") e.preventDefault();
-        });
-      }
-    </script>
-<script id="rendered-js">
-document.addEventListener('DOMContentLoaded', function (event) {
-  // array with texts to type in typewriter
-  var dataText = ["Wh00pz ! your security get down !", "Patch it now ! before got hacked again !", "Don't worry, your files are safe.", "Remember ! We are party at your security !"];
-
-  // type one text in the typwriter
-  // keeps calling itself until the text is finished
-  function typeWriter(text, i, fnCallback) {
-    // chekc if text isn't finished yet
-    if (i < text.length) {
-      // add next character to h1
-
-      document.getElementById("hekerabies").innerHTML = text.substring(0, i + 1);
-
-      // wait for a while and call this function again for next character
-      setTimeout(function () {
-        typeWriter(text, i + 1, fnCallback);
-      }, 150);
-    }
-    // text finished, call callback if there is a callback function
-    else if (typeof fnCallback == 'function') {
-        // call callback after timeout
-        setTimeout(fnCallback, 7000);
-      }
-  }
-  // start a typewriter animation for a text in the dataText array
-  function StartTextAnimation(i) {
-    if (typeof dataText[i] == 'undefined') {
-      setTimeout(function () {
-        StartTextAnimation(0);
-      }, 30000);
-    }
-    // check if dataText[i] exists
-    if (i < dataText[i].length) {
-      // text exists! start typewriter animation
-      typeWriter(dataText[i], 0, function () {
-        // after callback (and whole text has been animated), start next text
-        StartTextAnimation(i + 1);
-      });
-    }
-  }
-  // start the text animation
-  StartTextAnimation(0);
-});
-//# sourceURL=pen.js
-    </script>
-    <audio src="https://raw.githubusercontent.com/tlhkpln/hacksss/main/benim%20bisiklet.mp4" autoplay="true" id="lagu" loop=""></audio>
-    <video id="background-video" src="https://raw.githubusercontent.com/tlhkpln/hacksss/main/benim%20bisiklet.mp4" autoplay="" loop="" muted="" style="position: fixed;object-fit: cover;" poster="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=">
-      <source src="https://raw.githubusercontent.com/tlhkpln/hacksss/main/benim%20bisiklet.mp4" type="video/webm">
-    </video>
-    <table width="100%" height="80%">
-      <td>
-        <center>
-          <small>Team Virus VN</small>
-          <br>
-          <img src="https://media.tenor.com/TF1dO23NzfAAAAAd/nurican-tolun-canbequit.gif" width="170" height="170" loading="lazy" onerror="this.style.display = 'none'">
-          <br>Hacked by <red><i>Tmr Virus</i></red><br>
-          <font size="2" id="hekerabies"></font><br><br>
-          <small>
-            <font size="1" color="red"><a href="https://www.zone-h.org/archive/notifier=TMR" class="__cf_email__" data-cfemail="raofficialvirus@gmail.com">[zone-h&#160;protected]</a></font>
-          </small>
+    <div class="parent" style="display: none;">
+      <canvas id="canvas"></canvas>
+      <section class="above-fold">
+        <div class="wrap-present">
+          <div class="present-box" id="present">
+            <div class="present">
+              <div class="img-wrap" id="present-image"></div>
+            </div>
+            <div class="side front"></div>
+            <div class="side back"></div>
+            <div class="side left"></div>
+            <div class="side right"></div>
+            <div class="side top">
+              <span class="to">
+                <span class="name" id="nametag"> </span>
+              </span>
+            </div>
+            <div class="side bottom"></div>
           </div>
-          <div class="footer-greetings">
-            <marquee>
-              <font size="2">
-                <b>Virus</b> : Team Virus Viet Nam - Tmr Virus - Share Free - 30/02/2024
-              </font>
-            </marquee>
-          </div>
-      </td>
-    </table><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+        </div>
+        <p class="info-text">Click to Open</p>
+      </section>
+
+      <div id="card">
+        <h4 class="title-card">💘 Duy Hưng x Thanh Chúc 💘</h4>
+
+        <img
+          src="ThanhChuc.png"
+          class="honey"
+        />
+
+        <h4 class="content-card">
+          Chúc mừng năm mới, Chúc yêu dấu! 💐
+          Hôm nay là ngày đầu tiên của năm mới, Chúc yêu dấu! 💐Nhân ngày đặc biệt này, anh chỉ muốn nói rằng anh rất biết ơn vì có em trong cuộc đời, Em là người con gái tuyệt vời nhất mà anh từng gặp, Anh biết rằng trong thời gian đầu của chúng mình cũng tại ah mà đã xảy ra nhiều chuyện hiểu lầm những chuyện không hề mong muốn, Nhưng ah rất vui vì e đã tin ah và tha thứ cho anh để anh có thể chứng minh tình yêu của mình dành cho em, Không biết tới hiện tại em tin anh được bao nhiêu hay tình cảm của e dành cho anh nhiều tới mức nào, Nhưng điều ah hi vọng nhất là ah muốn được cùng e mãi mãi đi trên cùng một con đường, Và ah hi vọng rằng trong năm này và cả những năm về sau sẽ có e luôn bên cạnh ah, Điều anh mong muốn nhất là được nhìn thấy em luôn vui vẻ và cười tươi, Anh không chắc rằng anh có thể làm tất cả mọi thứ vì em, ah cũng ko có gì tài giỏi cả nhưng e nên nhớ anh vẫn luôn hướng tới e, ưu tiên e và làm tất cả những thứ ah có thể làm để e được cảm thấy hạnh phúc - vui vẻ khi e yêu ah, Đó là điều anh mong muốn nhất và điều cuối cùng ah muốn nói với e là dù có chuyện gì thì chúng mình cùng nhau vượt qua đừng nói những lời không hay và cũng đừng giấu nhau bất kì chuyện vui hay buồn nếu cần cứ việc chia sẻ nói với ah và ah vẫn sẽ luôn lắng nghe với an ủi em.Năm mới này ah cũng chúc em luôn vui vẻ, học giỏi hơn, xinh đẹp hơn, tất cả những may mắn sẽ tới với em và em sẽ luôn iu anh nhìu hơn. Thật sự anh yêu em rất nhiều! ❤️
+        </h4>
+      </div>
+    </div>
+    <audio autoplay loop  id="playAudio" style="display: none;">
+      <source src="namchattayanhnhe.mp3">
+    </audio>
+  </body>
+  <script src="config.js"></script>
+  <script src="canvas.js"></script>
+  <script src="present.js"></script>
+  <script>
+    const correctPassword = "15/01/2008";
+
+    function validatePassword() {
+      const input = document.getElementById("password-input").value;
+      if (input === correctPassword) {
+        document.getElementById("password-modal").style.display = "none";
+        document.querySelector(".parent").style.display = "block";
+        document.getElementById("playAudio").style.display = "block";
+      } else {
+        const errorMessage = document.getElementById("error-message");
+        errorMessage.style.display = "block";
+      }
+    }
+  </script>
+</html>
