--- a/index.html
+++ b/index.html
@@ -5,128 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thông tin học sinh</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
+        #student-info {
             margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
         }
     </style>
 </head>
 <body>
-    <h1>Danh sách thông tin học sinh</h1>
-
-    <!-- Dropdown để chọn tên học sinh -->
+    <h1>Thông tin học sinh</h1>
     <label for="student-select">Chọn học sinh:</label>
-    <select id="student-select" onchange="showStudentInfo()">
-        <option value="">-- Chọn tên --</option>
-        <!-- Các tên học sinh sẽ được thêm vào đây -->
+    <select id="student-select">
+        <option value="">--Chọn học sinh--</option>
     </select>
 
-    <table id="student-table">
-        <thead>
-            <tr>
-                <th>Họ và Tên</th>
-                <th>Mã Học Sinh</th>
-                <th>Ngày Sinh</th>
-                <th>Chỗ Ở Hiện Nay</th>
-                <th>Số Điện Thoại</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Dữ liệu sẽ được thêm vào đây -->
-        </tbody>
-    </table>
+    <div id="student-info"></div>
 
     <script>
-        let students = [];
+        // Đọc file txt và phân tích thông tin học sinh
+        const students = [];
+        let currentStudent = {};
+        let isProcessingStudent = false;
 
-        // Hàm tải và xử lý dữ liệu từ tệp
-        function loadData() {
-            fetch('data.txt')  // Đảm bảo rằng tệp .txt ở cùng thư mục hoặc đường dẫn chính xác
+        // Function để tải và phân tích nội dung file
+        function loadFile() {
+            const file = 'students.txt'; // Tên file txt chứa dữ liệu học sinh
+            fetch(file)
                 .then(response => response.text())
                 .then(data => {
                     const lines = data.split('\n');
-                    const selectElement = document.getElementById('student-select');
-                    students = [];
-                    selectElement.innerHTML = '<option value="">-- Chọn tên --</option>'; // Xóa các tùy chọn cũ
-
-                    let currentStudent = {};
-                    let isProcessingStudent = false;
-
-                    // Duyệt qua dữ liệu và thêm tên học sinh vào dropdown
-                    for (let i = 0; i < lines.length; i++) {
-                        const line = lines[i].trim();
-                        if (line.startsWith('1.') || line.startsWith('2.')) { // Dòng bắt đầu với số thứ tự (ví dụ: 1. Lại Quế Anh)
+                    lines.forEach(line => {
+                        // Kiểm tra các số thứ tự từ 1 đến 45
+                        if (/^\d{1,2}\./.test(line)) {
+                            // Lưu thông tin học sinh cũ nếu có
                             if (currentStudent.name) {
                                 students.push(currentStudent);
                             }
                             currentStudent = { name: line.split('. ')[1] };
                             isProcessingStudent = true;
                         } else if (isProcessingStudent) {
-                            // Trích xuất thông tin cho mỗi học sinh
                             if (line.startsWith('Mã học sinh:')) {
                                 currentStudent.studentId = line.split(': ')[1];
+                            } else if (line.startsWith('Số định danh cá nhân:')) {
+                                currentStudent.idNumber = line.split(': ')[1];
                             } else if (line.startsWith('Ngày sinh:')) {
-                                currentStudent.birthDate = line.split(': ')[1];
+                                currentStudent.dob = line.split(': ')[1];
+                            } else if (line.startsWith('Giới tính:')) {
+                                currentStudent.gender = line.split(': ')[1];
                             } else if (line.startsWith('Chỗ ở hiện nay:')) {
                                 currentStudent.address = line.split(': ')[1];
                             } else if (line.startsWith('Số Điện Thoại:')) {
                                 currentStudent.phone = line.split(': ')[1];
                             }
                         }
-                    }
-                    if (currentStudent.name) {  // Thêm học sinh cuối cùng
+                    });
+
+                    // Đảm bảo thêm học sinh cuối cùng
+                    if (currentStudent.name) {
                         students.push(currentStudent);
                     }
 
-                    // Cập nhật danh sách tên học sinh vào dropdown
-                    students.forEach(student => {
-                        const option = document.createElement('option');
-                        option.value = student.name;
-                        option.textContent = student.name;
-                        selectElement.appendChild(option);
-                    });
+                    // Cập nhật danh sách chọn học sinh
+                    updateStudentSelect();
                 })
-                .catch(err => console.error('Lỗi khi tải dữ liệu:', err));
+                .catch(error => console.error('Lỗi khi tải file:', error));
         }
 
-        // Hàm hiển thị thông tin của học sinh khi chọn từ dropdown
-        function showStudentInfo() {
-            const selectedName = document.getElementById('student-select').value;
-            const tableBody = document.getElementById('student-table').querySelector('tbody');
-            tableBody.innerHTML = ''; // Xóa dữ liệu cũ
+        // Hàm cập nhật danh sách học sinh vào select
+        function updateStudentSelect() {
+            const select = document.getElementById('student-select');
+            students.forEach((student, index) => {
+                const option = document.createElement('option');
+                option.value = index;
+                option.textContent = student.name;
+                select.appendChild(option);
+            });
+        }
 
-            if (selectedName) {
-                const student = students.find(s => s.name === selectedName);
-                if (student) {
-                    const row = `
-                        <tr>
-                            <td>${student.name}</td>
-                            <td>${student.studentId}</td>
-                            <td>${student.birthDate}</td>
-                            <td>${student.address}</td>
-                            <td>${student.phone}</td>
-                        </tr>
-                    `;
-                    tableBody.innerHTML += row;
-                }
+        // Hàm hiển thị thông tin học sinh khi chọn
+        function displayStudentInfo(index) {
+            const student = students[index];
+            const infoDiv = document.getElementById('student-info');
+            if (student) {
+                infoDiv.innerHTML = `
+                    <h3>Thông tin học sinh: ${student.name}</h3>
+                    <p><strong>Mã học sinh:</strong> ${student.studentId}</p>
+                    <p><strong>Số định danh cá nhân:</strong> ${student.idNumber}</p>
+                    <p><strong>Ngày sinh:</strong> ${student.dob}</p>
+                    <p><strong>Giới tính:</strong> ${student.gender}</p>
+                    <p><strong>Chỗ ở hiện nay:</strong> ${student.address}</p>
+                    <p><strong>Số Điện Thoại:</strong> ${student.phone}</p>
+                `;
+            } else {
+                infoDiv.innerHTML = '';
             }
         }
 
-        // Tải dữ liệu khi trang được load
-        window.onload = loadData;
+        // Xử lý sự kiện chọn học sinh từ danh sách
+        document.getElementById('student-select').addEventListener('change', function () {
+            const selectedIndex = this.value;
+            displayStudentInfo(selectedIndex);
+        });
+
+        // Tải file txt khi trang web được tải
+        loadFile();
     </script>
 </body>
 </html>
