--- a/index.html
+++ b/index.html
@@ -42,21 +42,29 @@
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
-            border: 1px solid #ddd;
+            border: 2px solid #3498db;
             background-color: #fafafa;
             margin-bottom: 20px;
             box-sizing: border-box;
+            transition: border-color 0.3s ease;
         }
 
         select:focus {
-            border-color: #3498db;
+            border-color: #2980b9;
             outline: none;
         }
 
+        /* Khung thông tin học sinh với hiệu ứng animation */
         #student-info {
-            background-color: #ecf0f1;
+            background-color: transparent; /* Giữ nền trong suốt */
             padding: 15px;
             border-radius: 8px;
+            border: 4px solid transparent; /* Khung viền ban đầu là trong suốt */
+            background-image: linear-gradient(white, white), 
+                              linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); /* Hiệu ứng cầu vồng */
+            background-origin: border-box;
+            background-clip: content-box, border-box;
+            animation: colorChange 5s linear infinite; /* Thêm hiệu ứng chuyển màu */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             display: none;
         }
@@ -81,6 +89,18 @@
             text-align: center;
             font-size: 18px;
             color: #7f8c8d;
+        }
+
+        /* Animation cho màu sắc viền */
+        @keyframes colorChange {
+            0% { border-color: red; }
+            14% { border-color: orange; }
+            28% { border-color: yellow; }
+            42% { border-color: green; }
+            57% { border-color: blue; }
+            71% { border-color: indigo; }
+            85% { border-color: violet; }
+            100% { border-color: red; }
         }
 
     </style>
