--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
             padding: 15px;
             border-radius: 8px;
             border: 4px solid transparent; /* Khung viền ban đầu là trong suốt */
-            background-image: linear-gradient(white, white), 
-                              linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); /* Hiệu ứng cầu vồng */
+            background-image: transparent;
             background-origin: border-box;
             background-clip: content-box, border-box;
             animation: colorChange 5s linear infinite; /* Thêm hiệu ứng chuyển màu */
