--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         // Function để tải và phân tích nội dung file
         function loadFile() {
-            const file = 'students.txt'; // Tên file txt chứa dữ liệu học sinh
+            const file = 'data.txt'; // Tên file txt chứa dữ liệu học sinh
             fetch(file)
                 .then(response => response.text())
                 .then(data => {
