--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <audio id="audioPlayer" autoplay>
-        Your browser does not support the audio element.
+    <audio autoplay loop id="playAudio" style="display: none;">
+      <source id="audioSource" src="">
     </audio>
     <div class="container">
         <img src="https://files.catbox.moe/z5ac9f.gif" alt="Thông tin học sinh" class="header-gif">
@@ -161,24 +161,16 @@
         <div id="student-info"></div>
 
     <script>
-        const songs = [
-            "https://r2.guns.lol/439a04f1-acb4-4461-8bb2-47521ae17224.mp3",
-            "https://r2.guns.lol/92f82931-0b65-4f9c-b398-be37cb620cbb.mp3"
-        ];
-
-        // Chọn một bài hát ngẫu nhiên từ mảng
-        function playRandomSong() {
-            const randomIndex = Math.floor(Math.random() * songs.length);
-            const selectedSong = songs[randomIndex];
-
-            // Cập nhật nguồn nhạc và phát
-            const audioPlayer = document.getElementById('audioPlayer');
-            audioPlayer.src = selectedSong;
-            audioPlayer.play();
-        }
-
-        // Phát bài hát ngẫu nhiên khi trang được tải
-        playRandomSong();
+        const audioFiles = ['1.mp3', '2.mp3'];
+        const randomIndex = Math.floor(Math.random() * audioFiles.length);
+        const randomAudioFile = audioFiles[randomIndex];
+          
+          // Thay đổi nguồn âm thanh của thẻ audio
+        document.getElementById('audioSource').src = randomAudioFile;
+          
+          // Tải lại audio để bắt đầu phát
+        document.getElementById('playAudio').load();
+  
         const students = [];
         let currentStudent = {}; // Only used for processing, not for display
         let isProcessingStudent = false;
