--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<script> 
+     alert("Admin Website By Rov!");
+</script>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thông tin học sinh</title>
+    <link rel="icon" href="https://files.catbox.moe/z5ac9f.gif">
+    <title>INFO 10D1</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     
     <style>
@@ -147,8 +151,8 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <audio autoplay loop id="playAudio" style="display: none;">
-      <source id="audioSource" src="">
+    <audio autoplay loop  id="playAudio" style="display: none;">
+      <source src="1.mp3">
     </audio>
     <div class="container">
         <img src="https://files.catbox.moe/z5ac9f.gif" alt="Thông tin học sinh" class="header-gif">
