--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://files.catbox.moe/z5ac9f.gif">
+    <link rel="icon" href="https://files.catbox.moe/z5ac9f.gif" type="image/gif">
     <title>INFO 10D1</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     
@@ -148,7 +148,7 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <audio autoplay loop  id="playAudio" style="display: none;">
+    <audio autoplay>
       <source src="1.mp3">
     </audio>
     <div class="container">
