--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://files.catbox.moe/z5ac9f.gif" type="image/gif">
+    <link rel="icon" href="https://files.catbox.moe/yysv6i.jpg">
     <title>INFO 10D1</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     
@@ -152,7 +152,7 @@
       <source src="1.mp3">
     </audio>
     <div class="container">
-        <img src="https://files.catbox.moe/z5ac9f.gif" alt="Thông tin học sinh" class="header-gif">
+        <img src="https://files.catbox.moe/z5ac9f.gif" alt="INFO 10D1" class="header-gif">
         <h1></h1>
         <label for="student-select">Chọn Học Sinh:</label>
         <select id="student-select">
