--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <audio autoplay loop  id="playAudio" style="display: none;">
-      <source src="1.mp3">
+    <audio autoplay loop id="playAudio" style="display: none;">
+        <source src="1.mp3" type="audio/mp3">
     </audio>
     <div class="container">
         <img src="https://files.catbox.moe/z5ac9f.gif" alt="INFO 10D1" class="header-gif">
@@ -162,8 +162,8 @@
         <div id="student-info"></div>
 
     <script>
-        alert("Admin Website By Rov!");
         document.getElementById("playAudio").style.display = "block";
+        alert("Admin Website By Rov!");
         const students = [];
         let currentStudent = {}; // Only used for processing, not for display
         let isProcessingStudent = false;
